# mpv-parakeet-transcriber

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mpv.conf  parakeet_caption.lua  parakeet_caption_for_JellyfinMpvShim.lua  parakeet_transcribe.py  pyproject.toml  requirements.txt  segmenter.py  srt_utils.py
.github/workflows/: ci.yml
mpv_parakeet/: __init__.py  cli.py  ffmpeg_io.py  separation.py  srt_utils.py  transcribe.py
separation/: bsr_separate.py  roformer_loader.py
tests/: test_cli.py  test_format_time_srt.py  test_srt_utils.py
weights/roformer/: presets.yaml
